# git-trophy

./: .gitignore  PROMOTION.md  README.md  demo.tape  pyproject.toml
examples/: multi_repo.py
src/: __init__.py  analyzer.py  git_trophy.py  renderer.py  trophies.py
