[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "git-trophy"
version = "1.0.0"
description = "🏆 Analyze your git repo and earn achievement trophies — gamify your contributions!"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "nadonghuang"}
]
keywords = ["git", "trophy", "achievement", "gamification", "cli", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Games/Entertainment",
]

[project.scripts]
git-trophy = "src.git_trophy:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
